--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 </head>
 
 <body>
-
+    <header>
+        <a href="#">
+            <img src="assets/icons/icon-logo.svg" alt="">
+        </a>
+        <a href="#">
+            <img src="assets/icons/shopping-bag.svg" alt=""><span>1</span>
+        </a>
+    </header>
 </body>
 
 </html>
