--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header>      
         <a href="#">
             <img src="assets/icons/icon-logo.svg" alt="">
         </a>
@@ -22,6 +22,16 @@
             <img src="assets/icons/shopping-bag.svg" alt=""><span>1</span>
         </a>
     </header>
+    <section class="hero container">
+        <div>
+            <h1>Snitap, sua vida mais <div>
+                <span>radical</span>
+                <span>divertida</span>
+                <span>saudável</span>
+                <span>radical</span>
+            </div></h1>
+        </div>
+    </section>
 </body>
 
 </html>
