add buttons hero section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>      
+    <header>
         <a href="#">
             <img src="assets/icons/icon-logo.svg" alt="">
         </a>
@@ -25,13 +25,29 @@
     <section class="hero container">
         <div>
             <h1>Snitap, sua vida mais <div>
-                <span>radical</span>
-                <span>divertida</span>
-                <span>saudável</span>
-                <span>radical</span>
-                
-            </div></h1>
+                    <span>radical</span>
+                    <span>divertida</span>
+                    <span>saudável</span>
+                    <span>radical</span>
+
+                </div>
+            </h1>
+            <div class="buttons">
+                <a href="#" class=" button buy shadow">
+                    <span>
+                        <img src="assets/icons/shopping-bag.svg" alt="">
+                    </span>
+                    COMPRAR AGORA
+                </a>
+                <a href="#" class="button play">
+                    <span class="shadow">
+                        <img src="assets/icons/play.svg" alt="">
+                    </span>
+                    VEJA EM AÇÃO
+                </a>
+            </div>
         </div>
+
     </section>
 </body>
 
