--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="assets/icons/shopping-bag.svg" alt=""><span>1</span>
         </a>
     </header>
-    <section class="hero container">
+    <section class="hero">
         <div>
             <h1>Snitap, sua vida mais <div>
                     <span>radical</span>
@@ -45,6 +45,15 @@
                     </span>
                     VEJA EM AÇÃO
                 </a>
+            </div>
+        </div>
+        <div>
+            <div class="content">
+                <img src="assets/hero/ellipse.svg" alt="">
+                <img src="assets/hero/patins-image.png" alt="">
+                <img src="assets/hero/stars-1.svg" alt="">
+                <img src="assets/hero/stars-2.svg" alt="">
+               
             </div>
         </div>
 
