--- a/index.html
+++ b/index.html
@@ -53,10 +53,36 @@
                 <img src="assets/hero/patins-image.png" alt="">
                 <img src="assets/hero/stars-1.svg" alt="">
                 <img src="assets/hero/stars-2.svg" alt="">
-               
+
             </div>
         </div>
 
+    </section>
+    <section class="banner">
+        <div class="scroller">
+            <div class="rolling">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+                <img src="assets/banner.svg" alt="">
+            </div>
+        </div>
     </section>
 </body>
 
