--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="top">
         <a href="#">
             <img src="assets/icons/icon-logo.svg" alt="">
         </a>
@@ -84,6 +84,69 @@
             </div>
         </div>
     </section>
+
+    <section class="gallery">
+        <header>
+            <span>GALERIA DE FOTOS</span>
+            <h2>#usesnitap por aí</h2>
+        </header>
+        <div class="content">
+            <figure data-delay>
+                <img src="assets/images/01.png" alt="">
+                <figcaption>
+                    <img src="assets/images/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="assets/images/02.png" alt="">
+                <figcaption>
+                    <img src="assets/images/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="assets/images/03.png" alt="">
+                <figcaption>
+                    <img src="assets/images/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+            <figure data-delay>
+                <img src="assets/images/04.png" alt="">
+                <figcaption>
+                    <img src="assets/images/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+        </div>
+    </section>
+    <footer>
+      <div class="logo">
+        <img src="assets/icons/icon-logo.svg" alt="">
+        Snitap
+      </div>
+      <nav>
+        <a href="#">Sobre</a>
+        <a href="#">Nossas Lojas</a>
+        <a href="#">Politicas de Privacidade</a>
+        
+      </nav>
+      <div class="social-links">
+            <a href="#" title="instagram">
+                <img src="assets/icons/mdi_instagram.svg" alt="">
+            </a>
+            <a href="#" title="instagram">
+                <img src="assets/icons/ic_baseline-facebook.svg" alt="">
+            </a>
+            <a href="#" title="instagram">
+                <img src="assets/icons/mdi_youtube.svg" alt="">
+            </a>
+            <a href="#" title="instagram">
+                <img src="assets/icons/ic_baseline-tiktok.svg" alt="">
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
